RECASTBOTS-1 : Initialization - status management

--- a/src/java/fr/paris/lutece/plugins/recastbots/resources/recastbots_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/recastbots/resources/recastbots_messages_fr.properties
@@ -13,16 +13,16 @@ adminFeature.ManageBots.description=Gestion des bots Recast
 
 
 # keys for business classes keys : RecastBot
-manage_recastbots.pageTitle=RecastBot
+manage_recastbots.pageTitle=Liste des bots Recast
 manage_recastbots.title=Liste des Bots
 manage_recastbots.buttonAdd=Ajouter un Bot
-manage_recastbots.columnBotKey=Bot key
+manage_recastbots.columnBotKey=Cl\u00e9 du bot
 manage_recastbots.columnName=Nom
 manage_recastbots.columnDescription=Description
 manage_recastbots.columnAvatarUrl=Avatar URL
-manage_recastbots.columnLanguage=Language
-manage_recastbots.columnBotStatus=Bot status
-manage_recastbots.columnToken=Token
+manage_recastbots.columnLanguage=Langue
+manage_recastbots.columnBotStatus=Etat du bot
+manage_recastbots.columnToken=Jeton de s\u00e9curit\u00e9 (token)
 create_recastbot.pageTitle=RecastBot
 create_recastbot.title=Cr\u00e9ation d'un Bot
 create_recastbot.labelBotKey=Bot key
@@ -86,3 +86,7 @@ info.recastbot.created=Bot cr\u00e9\u00e9 avec succ\u00e8s
 info.recastbot.updated=Bot modifi\u00e9 avec succ\u00e8s
 info.recastbot.removed=Bot supprim\u00e9 avec succ\u00e8s
 
+
+
+bot_status.enabled=Actif
+bot_status.disabled= Non actif
