RECASTBOTS-4 : Manage Standalone Mode and Welcome message

--- a/src/java/fr/paris/lutece/plugins/recastbots/resources/recastbots_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/recastbots/resources/recastbots_messages_fr.properties
@@ -23,6 +23,9 @@ manage_recastbots.columnAvatarUrl=Avatar URL
 manage_recastbots.columnLanguage=Langue
 manage_recastbots.columnBotStatus=Etat du bot
 manage_recastbots.columnToken=Jeton de s\u00e9curit\u00e9 (token)
+manage_recastbots.columnStandalone=Mode d'int\u00e9gration
+manage_recastbots.columnWelcome=Message d'accueil
+
 create_recastbot.pageTitle=RecastBot
 create_recastbot.title=Cr\u00e9ation d'un Bot
 create_recastbot.labelBotKey=Bot key
@@ -39,6 +42,11 @@ create_recastbot.labelBotStatus=Statut
 create_recastbot.labelBotStatus.help=Etat du bot
 create_recastbot.labelToken=Token
 create_recastbot.labelToken.help=Token d'autorisation du Bot \u00e0 r\u00e9cup\u00e9rer sur la plate-forme Recast
+create_recastbot.labelBotMode=Mode int\u00e9gration
+create_recastbot.labelBotMode.help=Mode d'int\u00e9gration : page web compl\u00e8te ou int\u00e9gration par iframe
+create_recastbot.labelWelcome=Message d'accueil
+create_recastbot.labelWelcome.help=Message d'accueil du bot \u00e0 l'ouverture de la conversation
+
 modify_recastbot.pageTitle=RecastBot
 modify_recastbot.title=Modification d'un Bot
 modify_recastbot.labelBotKey=ID
@@ -55,6 +63,10 @@ modify_recastbot.labelBotStatus=Statut
 modify_recastbot.labelBotStatus.help=Etat du bot
 modify_recastbot.labelToken=Token
 modify_recastbot.labelToken.help=Token d'autorisation du Bot \u00e0 r\u00e9cup\u00e9rer sur la plate-forme Recast
+modify_recastbot.labelBotMode=Mode int\u00e9gration
+modify_recastbot.labelBotMode.help=Mode d'int\u00e9gration : page web compl\u00e8te ou int\u00e9gration par iframe
+modify_recastbot.labelWelcome=Message d'accueil
+modify_recastbot.labelWelcome.help=Message d'accueil du bot \u00e0 l'ouverture de la conversation
 
 message.confirmRemoveRecastBot=Etes vous sur de vouloir supprimer ce RecastBot ?
 
@@ -90,3 +102,6 @@ info.recastbot.removed=Bot supprim\u00e9 avec succ\u00e8s
 
 bot_status.enabled=Actif
 bot_status.disabled= Non actif
+
+mode.standard=Mode Page Web
+mode.standalone=Mode int\u00e9gration iFrame 
